--- a/src/plugins/transport_scene_manager/CMakeLists.txt
+++ b/src/plugins/transport_scene_manager/CMakeLists.txt
@@ -1,4 +1,4 @@
-ign_gui_add_plugin(TransportSceneManager
+gz_gui_add_plugin(TransportSceneManager
   SOURCES
     TransportSceneManager.cc
   QT_HEADERS
