--- a/src/cmd/CMakeLists.txt
+++ b/src/cmd/CMakeLists.txt
@@ -13,4 +13,4 @@ configure_file(
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/cmdgui${PROJECT_VERSION_MAJOR}.rb DESTINATION lib/ruby/ignition)
 
 # Install the bash completion script in an unversioned location.
-install(FILES gui.bash_completion.sh DESTINATION share/ignition/ignition.completion.d)
+install(FILES gui.bash_completion.sh DESTINATION share/gz/gz.completion.d)
