Update name and logo on UI, examples and API docs
Signed-off-by: Louise Poubel <louise@openrobotics.org>

--- a/examples/config/plugin_params.config
+++ b/examples/config/plugin_params.config
@@ -6,7 +6,7 @@
 
 <plugin filename="Publisher">
   <!--
-    All elements within <ignition-gui> are parsed by Ignition GUI and common to
+    All elements within <ignition-gui> are parsed by Gazebo GUI and common to
     all plugins.
   -->
   <ignition-gui>
