--- a/include/gz/gui/config.hh.in
+++ b/include/gz/gui/config.hh.in
@@ -8,7 +8,7 @@
 #define IGNITION_GUI_VERSION "${PROJECT_VERSION}"
 #define IGNITION_GUI_VERSION_FULL "${PROJECT_VERSION_FULL}"
 
-#define IGNITION_GUI_VERSION_HEADER "Ignition ${IGN_DESIGNATION}, version ${PROJECT_VERSION_FULL}\nCopyright (C) 2017 Open Source Robotics Foundation.\nReleased under the Apache 2.0 License.\n\n"
+#define IGNITION_GUI_VERSION_HEADER "Gazebo ${IGN_DESIGNATION}, version ${PROJECT_VERSION_FULL}\nCopyright (C) 2017 Open Source Robotics Foundation.\nReleased under the Apache 2.0 License.\n\n"
 
 #cmakedefine BUILD_TYPE_PROFILE 1
 #cmakedefine BUILD_TYPE_DEBUG 1
