--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,9 @@ set(IGN_MSGS_VER ${ignition-msgs5_VERSION_MAJOR})
 #--------------------------------------
 # Find if ign command is available
 find_program(HAVE_IGN_TOOLS ign)
+if (HAVE_IGN_TOOLS)
+  set(IGN_TOOLS_VER 1)
+endif()
 
 #--------------------------------------
 # Find QT
