Tick-tock ignition-gui
Signed-off-by: methylDragon <methylDragon@gmail.com>

--- a/examples/config/dialog_on_exit_shutdown.config
+++ b/examples/config/dialog_on_exit_shutdown.config
@@ -18,12 +18,12 @@
 </window>
 
 <plugin filename="ShutdownButton">
-<ignition-gui>
+<gz-gui>
   <title>Shutdown</title>
   <property type="int" key="x">500</property>
   <property type="int" key="y">950</property>
   <property type="int" key="height">180</property>
   <property type="int" key="width">240</property>
-</ignition-gui>
+</gz-gui>
 </plugin>
 
