--- a/examples/config/grid_config.config
+++ b/examples/config/grid_config.config
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 
 <plugin filename="MinimalScene">
-    <ignition-gui>
+    <gz-gui>
       <title>View 1</title>
       <property type="string" key="state">docked</property>
-    </ignition-gui>
+    </gz-gui>
     <engine>ogre2</engine>
     <scene>scene</scene>
     <ambient_light>1 1 1</ambient_light>
@@ -12,7 +12,7 @@
     <camera_pose>-6 3 6 0 0.5 0</camera_pose>
 </plugin>
 <plugin filename="InteractiveViewControl" name="Interactive view control">
-  <ignition-gui>
+  <gz-gui>
     <anchors target="View 1">
       <line own="right" target="right"/>
       <line own="top" target="top"/>
@@ -22,12 +22,12 @@
     <property key="height" type="double">5</property>
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 <plugin filename="GridConfig" name="Grid config">
-  <ignition-gui>
+  <gz-gui>
     <property type="string" key="state">docked</property>
-  </ignition-gui>
+  </gz-gui>
   <insert>
     <horizontal_cell_count>3</horizontal_cell_count>
     <vertical_cell_count>2</vertical_cell_count>
