--- a/examples/config/plugin_params.config
+++ b/examples/config/plugin_params.config
@@ -6,10 +6,10 @@
 
 <plugin filename="Publisher">
   <!--
-    All elements within <ignition-gui> are parsed by Gazebo GUI and common to
+    All elements within <gz-gui> are parsed by Gazebo GUI and common to
     all plugins.
   -->
-  <ignition-gui>
+  <gz-gui>
     <title>Publisher 1</title>
 
     <!--
@@ -25,11 +25,11 @@
     <property type="double" key="height">400</property>
     <property type="double" key="width">250</property>
     <property type="bool" key="enabled">false</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
 <plugin filename="Publisher">
-  <ignition-gui>
+  <gz-gui>
     <title>Publisher 2</title>
     <property type="bool" key="showTitleBar">false</property>
     <property type="bool" key="resizable">false</property>
@@ -40,23 +40,23 @@
     <property type="double" key="width">300</property>
     <property type="double" key="rotation">30</property>
     <property type="double" key="scale">0.8</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
 <plugin filename="Publisher">
-  <ignition-gui>
+  <gz-gui>
     <title>Hidden publisher</title>
     <property type="bool" key="visible">false</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
 <plugin filename="Publisher">
-  <ignition-gui>
+  <gz-gui>
     <title>Collapsed publisher</title>
     <property key="width" type="double">250</property>
     <property key="height" type="double">50</property>
     <property key="state" type="string">docked_collapsed</property>
     <property key="showCollapseButton" type="bool">true</property>
     <property key="showTitleBar" type="bool">true</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
