--- a/examples/config/pubsub.config
+++ b/examples/config/pubsub.config
@@ -6,21 +6,21 @@
 </window>
 
 <plugin filename="Publisher">
-  <ignition-gui>
+  <gz-gui>
     <property type="int" key="x">9</property>
     <property type="int" key="y">50</property>
     <property type="int" key="z">0</property>
     <property type="int" key="height">400</property>
     <property type="int" key="width">250</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
 <plugin filename="TopicEcho">
-  <ignition-gui>
+  <gz-gui>
     <property type="int" key="x">275</property>
     <property type="int" key="y">50</property>
     <property type="int" key="z">0</property>
     <property type="int" key="height">687</property>
     <property type="int" key="width">300</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
