--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -5,10 +5,10 @@
     <height>894</height>
 </window>
 <plugin filename="MinimalScene">
-    <ignition-gui>
+    <gz-gui>
       <title>View 1</title>
       <property type="string" key="state">docked</property>
-    </ignition-gui>
+    </gz-gui>
     <engine>ogre2</engine>
     <scene>scene</scene>
     <ambient_light>1 1 1</ambient_light>
@@ -16,7 +16,7 @@
     <camera_pose>-6 0 6 0 0.5 0</camera_pose>
 </plugin>
 <plugin filename="InteractiveViewControl" name="Interactive view control">
-  <ignition-gui>
+  <gz-gui>
     <anchors target="View 1">
       <line own="right" target="right"/>
       <line own="top" target="top"/>
@@ -26,10 +26,10 @@
     <property key="height" type="double">5</property>
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 <plugin filename="TransportSceneManager" name="Transport Scene Manager">
-  <ignition-gui>
+  <gz-gui>
     <anchors target="View 1">
       <line own="right" target="right"/>
       <line own="top" target="top"/>
@@ -39,14 +39,14 @@
     <property key="height" type="double">5</property>
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
-  </ignition-gui>
+  </gz-gui>
   <service>/example/scene</service>
   <pose_topic>/example/pose</pose_topic>
   <deletion_topic>/example/delete</deletion_topic>
   <scene_topic>/example/scene</scene_topic>
 </plugin>
 <plugin filename="MarkerManager" name="Marker Manager">
-  <ignition-gui>
+  <gz-gui>
     <anchors target="View 1">
       <line own="right" target="right"/>
       <line own="top" target="top"/>
@@ -56,11 +56,11 @@
     <property key="height" type="double">5</property>
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
-  </ignition-gui>
+  </gz-gui>
   <stats_topic>/example/stats</stats_topic>
 </plugin>
 <plugin filename="CameraTracking" name="Camera tracking">
-  <ignition-gui>
+  <gz-gui>
     <anchors target="View 1">
       <line own="right" target="right"/>
       <line own="top" target="top"/>
@@ -70,10 +70,10 @@
     <property key="height" type="double">5</property>
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 <plugin filename="WorldControl">
-  <ignition-gui>
+  <gz-gui>
     <title>Controls</title>
     <property type="bool" key="showTitleBar">false</property>
     <property type="bool" key="resizable">false</property>
@@ -86,7 +86,7 @@
       <line own="left" target="left"/>
       <line own="bottom" target="bottom"/>
     </anchors>
-  </ignition-gui>
+  </gz-gui>
   <play_pause>true</play_pause>
   <step>true</step>
   <start_paused>false</start_paused>
@@ -95,7 +95,7 @@
 </plugin>
 
 <plugin filename="WorldStats">
-  <ignition-gui>
+  <gz-gui>
     <title>Stats</title>
     <property type="bool" key="showTitleBar">false</property>
     <property type="bool" key="resizable">false</property>
@@ -108,7 +108,7 @@
       <line own="right" target="right"/>
       <line own="bottom" target="bottom"/>
     </anchors>
-  </ignition-gui>
+  </gz-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
   <real_time_factor>true</real_time_factor>
