--- a/examples/config/scroll.config
+++ b/examples/config/scroll.config
@@ -6,42 +6,42 @@
 </window>
 
 <plugin filename="Publisher">
-  <ignition-gui>
+  <gz-gui>
     <property type="int" key="z">0</property>
     <property type="int" key="height">400</property>
     <property type="int" key="width">250</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
 <plugin filename="Publisher">
-  <ignition-gui>
+  <gz-gui>
     <property type="int" key="z">0</property>
     <property type="int" key="height">400</property>
     <property type="int" key="width">250</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
 <plugin filename="Publisher">
-  <ignition-gui>
+  <gz-gui>
     <property type="int" key="z">0</property>
     <property type="int" key="height">400</property>
     <property type="int" key="width">250</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
 <plugin filename="Publisher">
-  <ignition-gui>
+  <gz-gui>
     <property type="int" key="z">0</property>
     <property type="int" key="height">400</property>
     <property type="int" key="width">250</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
 <plugin filename="Publisher">
-  <ignition-gui>
+  <gz-gui>
     <property type="int" key="z">0</property>
     <property type="int" key="height">400</property>
     <property type="int" key="width">250</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
