--- a/examples/config/style.config
+++ b/examples/config/style.config
@@ -13,9 +13,9 @@
 <plugin filename="Publisher"/>
 
 <plugin filename="WorldControl">
-  <ignition-gui>
+  <gz-gui>
     <title>Controls: all</title>
-  </ignition-gui>
+  </gz-gui>
   <play_pause>true</play_pause>
   <step>true</step>
   <start_paused>false</start_paused>
