--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 
 <plugin filename="WorldControl">
-  <ignition-gui>
+  <gz-gui>
     <title>Controls: all</title>
     <property type="int" key="x">40</property>
     <property type="int" key="y">50</property>
     <property type="int" key="height">120</property>
     <property type="int" key="width">300</property>
-  </ignition-gui>
+  </gz-gui>
   <play_pause>true</play_pause>
   <step>true</step>
   <start_paused>false</start_paused>
@@ -16,38 +16,38 @@
 </plugin>
 
 <plugin filename="WorldControl">
-  <ignition-gui>
+  <gz-gui>
     <title>Controls: play/pause</title>
     <property type="int" key="x">40</property>
     <property type="int" key="y">190</property>
     <property type="int" key="height">120</property>
     <property type="int" key="width">300</property>
-  </ignition-gui>
+  </gz-gui>
   <play_pause>true</play_pause>
   <service>/world_control</service>
   <stats_topic>/world_stats</stats_topic>
 </plugin>
 
 <plugin filename="WorldControl">
-  <ignition-gui>
+  <gz-gui>
     <title>Controls: step</title>
     <property type="int" key="x">40</property>
     <property type="int" key="y">330</property>
     <property type="int" key="height">120</property>
     <property type="int" key="width">300</property>
-  </ignition-gui>
+  </gz-gui>
   <step>true</step>
   <service>/world_control</service>
 </plugin>
 
 <plugin filename="WorldStats">
-  <ignition-gui>
+  <gz-gui>
     <title>Stats: all</title>
     <property type="int" key="x">500</property>
     <property type="int" key="y">50</property>
     <property type="int" key="height">180</property>
     <property type="int" key="width">240</property>
-  </ignition-gui>
+  </gz-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
   <real_time_factor>true</real_time_factor>
@@ -56,26 +56,26 @@
 </plugin>
 
 <plugin filename="WorldStats">
-  <ignition-gui>
+  <gz-gui>
     <title>Stats: time only</title>
     <property type="int" key="x">500</property>
     <property type="int" key="y">350</property>
     <property type="int" key="height">180</property>
     <property type="int" key="width">240</property>
-  </ignition-gui>
+  </gz-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
   <topic>/world_stats</topic>
 </plugin>
 
 <plugin filename="WorldStats">
-  <ignition-gui>
+  <gz-gui>
     <title>Stats: RTF / it</title>
     <property type="int" key="x">500</property>
     <property type="int" key="y">650</property>
     <property type="int" key="height">180</property>
     <property type="int" key="width">240</property>
-  </ignition-gui>
+  </gz-gui>
   <real_time_factor>true</real_time_factor>
   <iterations>true</iterations>
   <topic>/world_stats</topic>
