--- a/examples/standalone/point_cloud/point_cloud.config
+++ b/examples/standalone/point_cloud/point_cloud.config
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 
 <plugin filename="MinimalScene">
-    <ignition-gui>
+    <gz-gui>
       <title>View 1</title>
       <property type="string" key="state">docked</property>
-    </ignition-gui>
+    </gz-gui>
     <engine>ogre2</engine>
     <scene>scene</scene>
     <ambient_light>1 1 1</ambient_light>
@@ -12,7 +12,7 @@
     <camera_pose>-10 5 10 0 0.5 0</camera_pose>
 </plugin>
 <plugin filename="InteractiveViewControl" name="Interactive view control">
-  <ignition-gui>
+  <gz-gui>
     <anchors target="View 1">
       <line own="right" target="right"/>
       <line own="top" target="top"/>
@@ -22,10 +22,10 @@
     <property key="height" type="double">5</property>
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 <plugin filename="MarkerManager" name="Marker Manager">
-  <ignition-gui>
+  <gz-gui>
     <anchors target="View 1">
       <line own="right" target="right"/>
       <line own="top" target="top"/>
@@ -35,29 +35,29 @@
     <property key="height" type="double">5</property>
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 <plugin filename="PointCloud" name="Point Cloud">
-  <ignition-gui>
+  <gz-gui>
     <title>Flat</title>
     <property type="string" key="state">docked</property>
-  </ignition-gui>
+  </gz-gui>
   <point_cloud_topic>/point_cloud</point_cloud_topic>
   <float_v_topic>/flat</float_v_topic>
 </plugin>
 <plugin filename="PointCloud" name="Point Cloud">
-  <ignition-gui>
+  <gz-gui>
     <title>Sum</title>
     <property type="string" key="state">docked</property>
-  </ignition-gui>
+  </gz-gui>
   <point_cloud_topic>/point_cloud</point_cloud_topic>
   <float_v_topic>/sum</float_v_topic>
 </plugin>
 <plugin filename="PointCloud" name="Point Cloud">
-  <ignition-gui>
+  <gz-gui>
     <title>Product</title>
     <property type="string" key="state">docked</property>
-  </ignition-gui>
+  </gz-gui>
   <point_cloud_topic>/point_cloud</point_cloud_topic>
   <float_v_topic>/product</float_v_topic>
 </plugin>
