--- a/src/plugins/shutdown_button/test.config
+++ b/src/plugins/shutdown_button/test.config
@@ -6,8 +6,8 @@
 </window>
 
 <plugin filename="ShutdownButton">
-  <ignition-gui>
+  <gz-gui>
     <title>Shutdown!</title>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
