Tick-tock header functions
Signed-off-by: methylDragon <methylDragon@gmail.com>

--- a/src/cmd/cmdgui.rb.in
+++ b/src/cmd/cmdgui.rb.in
@@ -142,12 +142,18 @@ class Cmd
     end
 
     # Read the library version.
-    Importer.extern 'char* ignitionVersion()'
+    Importer.extern 'char* gzVersion()'
     begin
-      plugin_version = Importer.ignitionVersion.to_s
+      plugin_version = Importer.gzVersion.to_s
     rescue DLError
-      puts "Library error: Problem running 'ignitionVersion()' from #{plugin}."
-      exit(-1)
+        Importer.extern 'char* ignitionVersion()'
+        begin
+          plugin_version = Importer.ignitionVersion.to_s
+          puts "ignitionVersion is deprecated. Use gzVersion instead."
+        rescue DLError
+          puts "Library error: Problem running 'gzVersion()' from #{plugin}."
+          exit(-1)
+        end
     end
 
     # Sanity check: Verify that the version of the yaml file matches the version
