add env vars for apple
Signed-off-by: Mabel Zhang <mabel@openrobotics.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,9 +69,11 @@ set(IGN_MSGS_VER ${ignition-msgs5_VERSION_MAJOR})
 
 #--------------------------------------
 # Find if ign command is available
-find_program(HAVE_IGN_TOOLS ign)
-if (HAVE_IGN_TOOLS)
-  set(IGN_TOOLS_VER 1)
+
+ign_find_package(ignition-tools QUIET)
+if (ignition-tools_FOUND)
+  set (HAVE_IGN_TOOLS TRUE)
+  set (IGN_TOOLS_VER 1)
 endif()
 
 #--------------------------------------
