Rename CMake project to gz
Signed-off-by: Louise Poubel <louise@openrobotics.org>

--- a/examples/standalone/scene_provider/CMakeLists.txt
+++ b/examples/standalone/scene_provider/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.10.2 FATAL_ERROR)
 
-project(ignition-gui-scene-provider)
+project(gz-gui-scene-provider)
 
-find_package(ignition-msgs9 REQUIRED)
-find_package(ignition-transport12 REQUIRED)
+find_package(gz-msgs9 REQUIRED)
+find_package(gz-transport12 REQUIRED)
 
 add_executable(scene_provider
   scene_provider.cc
 )
 target_link_libraries(scene_provider
-  ignition-msgs9::core
-  ignition-transport12::core
+  gz-msgs9::core
+  gz-transport12::core
 )
