--- a/src/plugins/marker_manager/CMakeLists.txt
+++ b/src/plugins/marker_manager/CMakeLists.txt
@@ -4,5 +4,5 @@ gz_gui_add_plugin(MarkerManager
   QT_HEADERS
     MarkerManager.hh
   PUBLIC_LINK_LIBS
-   ignition-rendering${IGN_RENDERING_VER}::ignition-rendering${IGN_RENDERING_VER}
+   gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
 )
