--- a/src/plugins/minimal_scene/CMakeLists.txt
+++ b/src/plugins/minimal_scene/CMakeLists.txt
@@ -25,7 +25,7 @@ gz_gui_add_plugin(MinimalScene
   QT_HEADERS
     MinimalScene.hh
   PUBLIC_LINK_LIBS
-   ignition-rendering${IGN_RENDERING_VER}::ignition-rendering${IGN_RENDERING_VER}
+   gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
    ${PROJECT_LINK_LIBS}
 )
 
