--- a/src/plugins/transport_scene_manager/CMakeLists.txt
+++ b/src/plugins/transport_scene_manager/CMakeLists.txt
@@ -6,6 +6,6 @@ gz_gui_add_plugin(TransportSceneManager
   TEST_SOURCES
     # TransportSceneManager_TEST.cc
   PUBLIC_LINK_LIBS
-   ignition-rendering${IGN_RENDERING_VER}::ignition-rendering${IGN_RENDERING_VER}
+   gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
 )
 
