--- a/tutorials.md.in
+++ b/tutorials.md.in
@@ -8,7 +8,7 @@ Ignition @IGN_DESIGNATION_CAP@ library and how to use the library effectively.
 **General**
 
 1. \subpage install "Installation"
-2. \subpage commandline "Command line usage": Learn to use `ign gui`
+2. \subpage commandline "Command line usage": Learn to use `gz gui`
 3. \subpage plugins "Plugins": Introduction to writing and loading plugins
 4. \subpage config "Configuration files": Load and find config files
 5. \subpage layout "Layout": Arrange plugins on the application
