Restore logic introduced in PR 240
Signed-off-by: Louise Poubel <louise@openrobotics.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,13 +68,11 @@ ign_find_package(ignition-msgs5 REQUIRED)
 set(IGN_MSGS_VER ${ignition-msgs5_VERSION_MAJOR})
 
 #--------------------------------------
-# Find if ign command is available
-
-ign_find_package(ignition-tools QUIET)
-if (ignition-tools_FOUND)
-  set (HAVE_IGN_TOOLS TRUE)
-  set (IGN_TOOLS_VER 1)
-endif()
+# Find if command is available. This is used to enable tests.
+# Note that CLI files are installed regardless of whether the dependency is
+# available during build time
+find_program(HAVE_IGN_TOOLS ign)
+set (IGN_TOOLS_VER 1)
 
 #--------------------------------------
 # Find QT
