Link ImageDisplay against common graphics
Signed-off-by: Louise Poubel <louise@openrobotics.org>

--- a/src/plugins/image_display/CMakeLists.txt
+++ b/src/plugins/image_display/CMakeLists.txt
@@ -3,6 +3,8 @@ gz_gui_add_plugin(ImageDisplay
     ImageDisplay.cc
   QT_HEADERS
     ImageDisplay.hh
+  PUBLIC_LINK_LIBS
+    gz-common${GZ_COMMON_VER}::graphics
   TEST_SOURCES
     # ImageDisplay_TEST.cc
 )
