--- a/test/performance/CMakeLists.txt
+++ b/test/performance/CMakeLists.txt
@@ -1,3 +1,3 @@
-ign_get_sources(tests)
+gz_get_sources(tests)
 
-ign_build_tests(TYPE PERFORMANCE SOURCES ${tests})
+gz_build_tests(TYPE PERFORMANCE SOURCES ${tests})
