show quick start menu test added
Signed-off-by: Mohamad <mohamad@openrobotics.org>

--- a/test/config/test.config
+++ b/test/config/test.config
@@ -2,6 +2,9 @@
 
 <window>
   <dialog_on_exit>false</dialog_on_exit>
+  <menus>
+    <quick_setup default="true"/>
+  </menus>
 </window>
 
 <plugin filename="TestPlugin">
